--- a/client/src/containers/DataApp/DataApp.css
+++ b/client/src/containers/DataApp/DataApp.css
@@ -80,7 +80,7 @@
     width: 100%;
     height: 10px;
     padding-left: 20px;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0), var(--background-color));
+    background: linear-gradient(0deg, var(--fader-color), var(--background-color));
   }
 }
 
@@ -101,7 +101,7 @@
     top: 62px;
     width: 100%;
     height: 10px;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0), var(--background-color));
+    background: linear-gradient(0deg, var(--fader-color), var(--background-color));
   }
 }
 
