--- a/client/src/containers/PledgeApp/components/Contacts/Contacts.css
+++ b/client/src/containers/PledgeApp/components/Contacts/Contacts.css
@@ -24,7 +24,7 @@
     width: 100%;
     height: 10px;
     padding-left: 20px;
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0), var(--background-color));
+    background: linear-gradient(0deg, var(--fader-color), var(--background-color));
   }
 }
 
