--- a/client/src/containers/PledgeApp/components/MyMerits/MyMerits.css
+++ b/client/src/containers/PledgeApp/components/MyMerits/MyMerits.css
@@ -17,7 +17,7 @@
   top: 52px;
   width: 100%;
   height: 10px;
-  background: linear-gradient(0deg, rgba(255, 255, 255, 0), var(--background-color));
+  background: linear-gradient(0deg, var(--fader-color), var(--background-color));
 }
 
 .merit-amount-container {
